k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-fullstack-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nuxt-fullstack-app
  template:
    metadata:
      labels:
        app: nuxt-fullstack-app
    spec:
      containers:
      - name: nuxt-fullstack-app
        image: gcr.io/concierge-miami/itinerary:92
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        # readinessProbe:
        #   httpGet:
        #     path: /api/health
        #     port: 3000
        #   initialDelaySeconds: 10
        #   periodSeconds: 5
        # livenessProbe:
        #   httpGet:
        #     path: /api/health
        #     port: 3000
        #   initialDelaySeconds: 15
        #   periodSeconds: 10
