k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-fullstack-service
spec:
  selector:
    app: nuxt-fullstack-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
