k8s/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nuxt-route
spec:
  parentRefs:
  - name: nuxt-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nuxt-fullstack-service
      port: 80
